# crypto-market-watcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: architecture_diagram.md  design.md  testing_strategy.md
include/app/: application.hpp
include/core/: alert_engine.hpp  event_queue.hpp  market_data_engine.hpp  recorder.hpp  ring_buffer.hpp  types.hpp
include/net/: websocket_client.hpp
include/ui/: dashboard_renderer.hpp
include/util/: config.hpp  logger.hpp
scripts/: format.sh  run_demo.sh
src/app/: application.cpp  main.cpp
src/core/: alert_engine.cpp  market_data_engine.cpp  recorder.cpp
src/net/: websocket_client.cpp
src/ui/: dashboard_renderer.cpp
src/util/: config.cpp  logger.cpp
tests/: CMakeLists.txt  test_alert.cpp  test_market_data.cpp  test_queue.cpp
